fix: fix collapsed audio widget in virtualized message list

--- a/src/v1/Audio.scss
+++ b/src/v1/Audio.scss
@@ -67,6 +67,7 @@
       margin: 0;
       padding: 0;
       line-height: 1;
+      font-size: var(--md-font);
     }
 
     &--subtitle {
